--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         <div class='medium-4 large-4 columns'>
           <div class='fadein mod modIconText' data-delay='0'>
             <div class='icon-text-circle'>
+              <div class="hexagontop"></div>
               <i class='fa fa-suitcase'></i>
               <h3>OCP for Companies</h3>
               <p>Est aperiam ex sint maiores aliquam delectus minima rerum et natus rerum sit quae nostrum.</p>
