--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
     
     
     <div id='main' role='main'>
-      <div class='full parallax' style='background-image: url(images/bg.jpg); color: #fff;'>
+      <div class='full parallax' style='background-image: url(images/bg2.jpg); color: #fff;'>
         <div class='row'>
           <div class='large-12 columns'>
             <div class='big mod modSectionHeader'>
