new black menubar that doesdoesn't change sizes

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </div>      
         <div class="row">
           <div class="large-6 columns biopic">
-            <img style="max-width:250px; max-height:250px;" src="images/kevin.png"><br>
+            <a href="leadership.html"><img class="bioimg" src="images/kevin.png"></a><br>
             <div class='intro'>
               <h3>Kevin Sample</h3>
               <p>Managing Partner</p>
@@ -325,7 +325,7 @@
             </div>
           </div>
           <div class="large-6 columns biopic">
-            <img style="max-width:250px; max-height:250px;" src="images/linda.png"><br>
+            <a href="leadership.html"><img class="bioimg" src="images/linda.png"></a><br>
             <div class='intro'>
               <h3>Linda Roach</h3>
               <p>Managing Partner</p>
