--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
     
     
     <div id='main' role='main'>
-      <div class='full parallax' style='background-image: url(images/bg2.jpg); color: #fff;'>
+      <div class='full parallax' style='background-image: url(images/bg5.jpg); color: #fff;'>
         <div class='row'>
           <div class='twelve columns'>
             <div class='big mod modSectionHeader'>
@@ -175,9 +175,9 @@
         <div class='three spacing'></div>
       </div>
       <div class='full'>
-        <div class="row">
+                <div class="row">
           <div class="large-6 columns biopic">
-            <img style="max-width:250px; max-height:250px;" src="images/kevin.png"><br>
+            <a href="leadership.html"><img class="bioimg" src="images/kevin.png"></a><br>
             <div class='intro'>
               <h3>Kevin Sample</h3>
               <p>Managing Partner</p>
@@ -190,7 +190,7 @@
             </div>
           </div>
           <div class="large-6 columns biopic">
-            <img style="max-width:250px; max-height:250px;" src="images/linda.png"><br>
+            <a href="leadership.html"><img class="bioimg" src="images/linda.png"></a><br>
             <div class='intro'>
               <h3>Linda Roach</h3>
               <p>Managing Partner</p>
@@ -206,17 +206,6 @@
         <div class='two spacing'></div>
       </div>
       <div class='full parallax bluebg'>
-        <div class='row'>
-          <div class='large-12 columns'>
-            <div class='fadein mod modIconText' data-delay='0'>
-            <div class='mod modMilestone'>
-              <div class="whitehexagontop"></div>
-              <i class='fa fa-quote-left'></i>
-              <div class="whitehexagonbottom"></div>
-            </div>
-          </div>
-          </div>
-        </div>
         <div class='row'>
           <div class='large-12 columns'>
             <div class='mod modSectionHeader'>
