all Cris' changes added

--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
         <div class='three spacing'></div>
       </div>
       
-      <div class='full'>
+      <div class='full bluebg'>
         <div class='row'>
           <div class='large-12 columns'>
             <div class='mod modSectionHeader'>
               <div class='centered-text'>
-                <h2 style=''>
+                <h2 class="headerwhite">
                   Our services
                 </h2>
               </div>
@@ -210,28 +210,28 @@
           <div class='medium-6 columns'>
             <div class='fadein mod modIconText' data-delay='0'>
               <div class='icon-text-simple'>
-                <h3>Buy Companies</h3>
+                <h3 class="headerwhite">Buy Companies</h3>
                 <p>Accusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.</p>
               </div>
               <div class='two spacing'></div>
             </div>
             <div class='fadein mod modIconText' data-delay='300'>
               <div class='icon-text-simple'>
-                <h3>Look for Operators</h3>
+                <h3 class="headerwhite">Look for Operators</h3>
                 <p>Accusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.</p>
               </div>
               <div class='two spacing'></div>
             </div>
             <div class='fadein mod modIconText' data-delay='600'>
               <div class='icon-text-simple'>
-                <h3>Funding and Capitals</h3>
+                <h3 class="headerwhite">Funding and Capitals</h3>
                 <p>Accusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.</p>
               </div>
               <div class='two spacing'></div>
             </div>
             <div class='fadein mod modIconText' data-delay='900'>
               <div class='icon-text-simple'>
-                <h3>Management</h3>
+                <h3 class="headerwhite">Management</h3>
                 <p>Accusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.</p>
               </div>
               <div class='two spacing'></div>
