--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         <ul class='title-area'>
           <li class='name'>
             <h1>
-              <a href='index.html'>
-                <img width="126" height="48" alt="" src="images/logo.png" />
+              <a href='index.html' style="color:white; font-size:12px; ">
+                <img class="logobig" alt="" src="images/logo.png" />
+                <img class="logosmall" alt="" src="images/logosmall.png" />
               </a>
             </h1>
           </li>
