--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,9 @@
         <ul class='title-area'>
           <li class='name'>
             <h1>
-              <a href='index.html'>
-                <img width="126" height="48" alt="" src="images/logo.png" />
+              <a href='index.html' style="color:white; font-size:12px; ">
+                <img class="logobig" alt="" src="images/logo.png" />
+                <img class="logosmall" alt="" src="images/logosmall.png" />
               </a>
             </h1>
           </li>
@@ -76,17 +77,17 @@
               <a href='industries.html'>Industries</a>
             </li>
             <li class='has-dropdown'>
-              <a href='about.html'>About Us</a>
+              <a href='about.html'>About</a>
               <ul class='dropdown'>
                 <li>
-                  <a href='about.html#history'>History</a>
+                  <a href='about.html'>Us</a>
                 </li>
                 <li>
                   <a href='leadership.html'>Leadership</a>
                 </li>
                 <li class=''>
-              	  <a href='process.html'>Our Process</a>
-            	</li>
+                  <a href='process.html'>Our Process</a>
+              </li>
               </ul>
             </li>
             
@@ -117,7 +118,7 @@
       </div>
       <div class='full'>
         <div class='row'>
-          <div class='medium-8 columns'>
+          <div class='medium-4 columns'>
             <div class='form'>
               <div class='row'>
                 <form id='contact_form' method='POST'>
@@ -150,6 +151,10 @@ Dallas, TX 7525</p>
               <h4>Our Email:</h4>
               <p>kevin@ocpllc.com</p>
             </div>
+            <div class='two spacing'></div>
+          </div>
+          <div class='medium-4 columns'>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.993032666792!2d-122.68416778444097!3d45.5102188791016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950a16a79950e5%3A0x7242174bfeb080aa!2s421+SW+Hall+St%2C+Portland%2C+OR+97201!5e0!3m2!1sen!2sus!4v1493061587341" class="map" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
