--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
               <a href='industries.html'>Industries</a>
             </li>
             <li class='has-dropdown'>
-              <a href='about.html'>About Us</a>
+              <a href='about.html'>About</a>
               <ul class='dropdown'>
                 <li>
-                  <a href='about.html#history'>History</a>
+                  <a href='about.html'>Us</a>
                 </li>
                 <li>
                   <a href='leadership.html'>Leadership</a>
