--- a/operators.html
+++ b/operators.html
@@ -56,8 +56,9 @@
         <ul class='title-area'>
           <li class='name'>
             <h1>
-              <a href='index.html'>
-                <img width="126" height="48" alt="" src="images/logo.png" />
+              <a href='index.html' style="color:white; font-size:12px; ">
+                <img class="logobig" alt="" src="images/logo.png" />
+                <img class="logosmall" alt="" src="images/logosmall.png" />
               </a>
             </h1>
           </li>
@@ -78,17 +79,17 @@
               <a href='industries.html'>Industries</a>
             </li>
             <li class='has-dropdown'>
-              <a href='about.html'>About Us</a>
+              <a href='about.html'>About</a>
               <ul class='dropdown'>
                 <li>
-                  <a href='about.html#history'>History</a>
+                  <a href='about.html'>Us</a>
                 </li>
                 <li>
                   <a href='leadership.html'>Leadership</a>
                 </li>
                 <li class=''>
-              	  <a href='process.html'>Our Process</a>
-            	</li>
+                  <a href='process.html'>Our Process</a>
+              </li>
               </ul>
             </li>
             
