--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
     <div id='main' role='main'>
       <div class='herofull' style='background-image: url(images/bg.jpg); color: #fff;'>
         <div class='rowheader'>
+          <div class='large-12 columns'>
+            <h2 class="herotext">OCP advise organizations to get
+                Smart Investments</h2>
+          </div>
           <div class='twelve columns'>
             <div class='big mod modSectionHeader'>
               <div class='centered-text'>
