--- a/lindaroach.html
+++ b/lindaroach.html
@@ -53,12 +53,9 @@
       <nav class='top-bar' data-options='sticky_on: large' data-topbar=''>
         <ul class='title-area'>
           <li class='name'>
-            <h1>
-              <a href='index.html' style="color:white; font-size:12px; ">
-                <img class="logobig" alt="" src="images/logo.png" />
-                <img class="logosmall" alt="" src="images/logosmall.png" />
+              <a href='index.html' class="logo">
+                <img style="width:36px" alt="" src="images/logosmall.png" />  OCP Equity Partners
               </a>
-            </h1>
           </li>
           <li class='toggle-topbar menu-icon'>
             <a href='#'>Menu</a>
