--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class='herofull' style='background-image: url(images/bg.jpg); color: #fff;'>
         <div class='rowheader'>
           <div class='large-12 columns'>
-            <h2 class="herotext">OCP advise organizations to get
+            <h2 class="herotext">OCP advises organizations to make
                 Smart Investments</h2>
           </div>
           <div class='twelve columns'>
