--- a/companies.html
+++ b/companies.html
@@ -158,45 +158,22 @@ In addition to managing the standard turnkey process as mentioned before, OCP ca
       <div class='three spacing'></div>
       <div class='row'>
         <div class='large-4 medium-4 columns'>
+          <div class='spacing'></div>
           <h1>
             <a href='index.html'>
-              <img width="126" height="48" alt="" src="images/logowhite.png" />
+              <img width="155px" alt="" src="images/logowhite.png" />
             </a>
           </h1>
           <p>©2017 OCP. All rights reserved.</p>
-          <div class='spacing'></div>
-          <ul class='socials'>
-            <li>
-              <a href='http://facebook.com'>
-                <i class='fa fa-facebook'></i>
-              </a>
-            </li>
-            <li>
-              <a href='http://twitter.com'>
-                <i class='fa fa-twitter'></i>
-              </a>
-            </li>
-            <li>
-              <a href='http://dribbble.com'>
-                <i class='fa fa-dribbble'></i>
-              </a>
-            </li>
-            <li>
-              <a href='http://tumblr.com'>
-                <i class='fa fa-tumblr'></i>
-              </a>
-            </li>
-          </ul>
           <div class='spacing'></div>
         </div>
         <div class='large-4 medium-4 columns'>
           <div class='spacing'></div>
           <div class='links'>
-            <h4>OCP Equity Partners</h4>
+            <h4 class="footerheader">OCP Equity Partners</h4>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="history.html">OPC's History</a></li>
               <li><a href="leadership.html">Leadership</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -206,12 +183,12 @@ In addition to managing the standard turnkey process as mentioned before, OCP ca
         <div class='large-4 medium-4 columns'>
           <div class='spacing'></div>
           <div class='links'>
-            <h4>Model Solution</h4>
+            <h4 class="footerheader">Model Solution</h4>
             <ul>
-             <li><a href="companies.html">OPC for Companies</a></li>
-              <li><a href="operators.html">OPC for Operators</a></li>
-              <li><a href="indsutries.html">OPC's Industries</a></li>
-              <li><a href="process.html">OPC's Process</a></li>
+             <li><a href="companies.html">OCP for Companies</a></li>
+              <li><a href="operators.html">OCP for Operators</a></li>
+              <li><a href="indsutries.html">OCP's Industries</a></li>
+              <li><a href="process.html">OCP's Process</a></li>
             </ul>
           </div>
           <div class='spacing'></div>
