--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
       </div>
       <div class='full'>
         <div class='row'>
-          <div class='medium-4 columns'>
+          <div class='medium-6 columns'>
             <div class='form'>
               <div class='row'>
                 <form id='contact_form' method='POST'>
@@ -136,7 +136,7 @@
             </div>
             <div class='two spacing'></div>
           </div>
-          <div class='medium-4 columns'>
+          <div class='medium-6 columns'>
             <div class='contact-details'>
               <h4>Our location:</h4>
               <p>14241 Dallas Parkway Suite 650<br>
@@ -150,7 +150,8 @@ Dallas, TX 7525</p>
             </div>
             <div class='two spacing'></div>
           </div>
-          <div class='medium-4 columns'>
+          <div class='medium-12 columns'>
+            <div class="overlay" onClick="style.pointerEvents='none'"></div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.993032666792!2d-122.68416778444097!3d45.5102188791016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950a16a79950e5%3A0x7242174bfeb080aa!2s421+SW+Hall+St%2C+Portland%2C+OR+97201!5e0!3m2!1sen!2sus!4v1493061587341" class="map" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
         </div>
@@ -164,45 +165,22 @@ Dallas, TX 7525</p>
       <div class='three spacing'></div>
       <div class='row'>
         <div class='large-4 medium-4 columns'>
+          <div class='spacing'></div>
           <h1>
             <a href='index.html'>
-              <img width="126" height="48" alt="" src="images/logowhite.png" />
+              <img width="155px" alt="" src="images/logowhite.png" />
             </a>
           </h1>
           <p>©2017 OCP. All rights reserved.</p>
-          <div class='spacing'></div>
-          <ul class='socials'>
-            <li>
-              <a href='http://facebook.com'>
-                <i class='fa fa-facebook'></i>
-              </a>
-            </li>
-            <li>
-              <a href='http://twitter.com'>
-                <i class='fa fa-twitter'></i>
-              </a>
-            </li>
-            <li>
-              <a href='http://dribbble.com'>
-                <i class='fa fa-dribbble'></i>
-              </a>
-            </li>
-            <li>
-              <a href='http://tumblr.com'>
-                <i class='fa fa-tumblr'></i>
-              </a>
-            </li>
-          </ul>
           <div class='spacing'></div>
         </div>
         <div class='large-4 medium-4 columns'>
           <div class='spacing'></div>
           <div class='links'>
-            <h4>OCP Equity Partners</h4>
+            <h4 class="footerheader">OCP Equity Partners</h4>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="history.html">OPC's History</a></li>
               <li><a href="leadership.html">Leadership</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -212,12 +190,12 @@ Dallas, TX 7525</p>
         <div class='large-4 medium-4 columns'>
           <div class='spacing'></div>
           <div class='links'>
-            <h4>Model Solution</h4>
+            <h4 class="footerheader">Model Solution</h4>
             <ul>
-             <li><a href="companies.html">OPC for Companies</a></li>
-              <li><a href="operators.html">OPC for Operators</a></li>
-              <li><a href="indsutries.html">OPC's Industries</a></li>
-              <li><a href="process.html">OPC's Process</a></li>
+             <li><a href="companies.html">OCP for Companies</a></li>
+              <li><a href="operators.html">OCP for Operators</a></li>
+              <li><a href="indsutries.html">OCP's Industries</a></li>
+              <li><a href="process.html">OCP's Process</a></li>
             </ul>
           </div>
           <div class='spacing'></div>
