--- a/process.html
+++ b/process.html
@@ -117,19 +117,21 @@
         </div>
         <div class='four spacing'></div>
       </div>
-      <div class='full' style='background: #f5f5f5'>
+      <div class='full'>
         <div class='row'>
           <div class='large-12 columns'>     
-              <div class='content'>
-                <div class="centered-text">
-                  <h2>OCP Success Process</h2>
-                <div>
-                <div class="three spacing"></div>
+            <div class='content'>
+              <div class="centered-text">
+                <h2>OCP Success Process</h2>
+              <div>
+              <div class="three spacing"></div>
+              <div class="row">
+                <div class="col-lg-12">
                   <ul class="timeline">
                     <li>
                       <div class="timeline-image">
                         <div class="hexagontop"></div>
-                          <i class='fa fa-suitcase'></i>
+                          <i class='fa fa-folder'></i>
                         <div class="hexagonbottom"></div>
                       </div>
                       <div class="timeline-panel">
@@ -144,7 +146,7 @@
                     <li class="timeline-inverted">
                       <div class="timeline-image">
                         <div class="hexagontop"></div>
-                          <i class='fa fa-suitcase'></i>
+                          <i class='fa fa-money'></i>
                         <div class="hexagonbottom"></div>
                       </div>
                       <div class="timeline-panel">
@@ -159,7 +161,7 @@
                     <li>
                       <div class="timeline-image">
                         <div class="hexagontop"></div>
-                          <i class='fa fa-suitcase'></i>
+                          <i class='fa fa-comments'></i>
                         <div class="hexagonbottom"></div>
                       </div>
                       <div class="timeline-panel">
@@ -174,7 +176,7 @@
                     <li class="timeline-inverted">
                       <div class="timeline-image">
                         <div class="hexagontop"></div>
-                          <i class='fa fa-suitcase'></i>
+                          <i class='fa fa-bullseye'></i>
                         <div class="hexagonbottom"></div>
                       </div>
                       <div class="timeline-panel">
@@ -189,7 +191,7 @@
                     <li>
                       <div class="timeline-image">
                         <div class="hexagontop"></div>
-                          <i class='fa fa-suitcase'></i>
+                          <i class='fa fa-gears'></i>
                         <div class="hexagonbottom"></div>
                       </div>
                       <div class="timeline-panel">
@@ -204,7 +206,7 @@
                     <li class="timeline-inverted">
                       <div class="timeline-image">
                         <div class="hexagontop"></div>
-                          <i class='fa fa-suitcase'></i>
+                          <i class='fa fa-users'></i>
                         <div class="hexagonbottom"></div>
                       </div>
                       <div class="timeline-panel">
@@ -219,7 +221,7 @@
                     <li>
                       <div class="timeline-image">
                         <div class="hexagontop"></div>
-                          <i class='fa fa-suitcase'></i>
+                          <i class='fa fa-lock'></i>
                         <div class="hexagonbottom"></div>
                       </div>
                       <div class="timeline-panel">
@@ -231,9 +233,23 @@
                         </div>
                       </div>
                     </li>
+                    <li class="timeline-inverted">
+                      <div class="timeline-image">
+                        <div class="hexagontop"></div>
+                          <i class='fa fa-envelope'></i>
+                        <div class="hexagonbottom"></div>
+                      </div>
+                      <div class="timeline-panel">
+                        <div class="timeline-heading">
+                          <h3 class="timeline-end">Contact Us</h3>
+                        </div>
+                      </div>
+                    </li>
                   </ul>
-                <div class='spacing'></div>   
+                  <div class='spacing'></div>  
+                </div>
               </div>
+            </div>
             <div class='big mod modBlogPost'>
               <div class='content'>
                 <h4>Basic Investment Criteria</h4>
