--- a/operators.html
+++ b/operators.html
@@ -76,7 +76,7 @@
               <a href='industries.html'>Industries</a>
             </li>
             <li class='has-dropdown'>
-              <a href='about.html'>About</a>
+              <a>About</a>
               <ul class='dropdown'>
                 <li>
                   <a href='about.html'>Us</a>
