--- a/process.html
+++ b/process.html
@@ -76,7 +76,7 @@
               <a href='industries.html'>Industries</a>
             </li>
             <li class='has-dropdown'>
-              <a href='about.html'>About</a>
+              <a>About</a>
               <ul class='dropdown'>
                 <li>
                   <a href='about.html'>Us</a>
@@ -102,7 +102,7 @@
 	  
 	  
     <div id='main' role='main'>
-      <div class='full parallax' style='background-image: url(images/bg5.jpg); color: #fff;'>
+      <div class='full parallax' style='background-image: url(images/bg6.jpg); color: #fff;'>
         <div class='row'>
           <div class='large-12 columns'>
             <div class='big mod modSectionHeader'>
